working repo search with static query using RestTemplate.
